# node-vcam

./: .editorconfig  .gitignore  .prettierrc.json  Cargo.toml  eslint.config.ts  package.json
samples/: demo.ts  simple_sum.ts
scripts/: build.js  check.ts  clean.js  demo.ts  format.ts
src/: lib.rs  sender.rs  utils.rs  win32.rs
